<?xml version="1.0" encoding="utf-8"?><ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20.0dip">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20.0dip"
            android:text="@string/service_status"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="20.0sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/gui_acc_perm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/access_permission"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20.0sp" />

            <TextView
                android:id="@+id/gui_acc_serv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/access_Service"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20.0sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/gui_overlay_perm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/overlay_Permission"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20.0sp" />

            <TextView
                android:id="@+id/gui_overlay_serv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/overlay_Service"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20.0sp" />


        </LinearLayout>

        <Button
            android:id="@+id/gui_setup_perm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20.0dip"
            android:background="@drawable/bg_button"
            android:nextFocusDown="@id/dsbar_mouse_size"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/Setup_Permissions"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/gui_about"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.50"
            android:autoLink="web"
            android:fontFamily="monospace"
            android:linksClickable="true"
            android:nextFocusUp="@id/gui_setup_perm"
            android:nextFocusDown="@id/dsbar_mouse_size"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="20.0sp"
            android:visibility="gone" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:text="Other Settings"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="20.0sp"
            android:visibility="gone" />


        <LinearLayout
            android:id="@+id/mouse_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mouse Size (Small to Large)"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20.0sp" />

            <SeekBar
                android:id="@+id/dsbar_mouse_size"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:foregroundTint="@color/white"
                android:max="4"
                android:nextFocusUp="@id/gui_about"
                android:nextFocusDown="@id/dsbar_mouse_scspeed"
                android:progress="1"
                android:progressBackgroundTint="@color/white_2"
                android:progressTint="@color/white"
                android:thumbTint="@color/white"
                android:tickMarkTint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mouse_scroll_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Scroll Speed (Fast to Slow)"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20.0sp" />

            <SeekBar
                android:id="@+id/dsbar_mouse_scspeed"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:foregroundTint="@color/white"
                android:max="20"
                android:nextFocusUp="@id/dsbar_mouse_size"
                android:nextFocusDown="@id/sp_mouse_icon"
                android:progress="4"
                android:progressBackgroundTint="@color/white_2"
                android:progressTint="@color/white"
                android:thumbTint="@color/white"
                android:tickMarkTint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mouse_icon"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.20"
                android:text="Mouse Icon"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20.0sp" />

            <Spinner
                android:id="@+id/sp_mouse_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.80"
                android:drawSelectorOnTop="true"
                android:dropDownWidth="match_parent"
                android:nextFocusUp="@id/dsbar_mouse_scspeed"
                android:nextFocusDown="@id/cb_border_window"
                android:popupBackground="@drawable/focus_selector"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_border_window"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:buttonTint="@color/white"
            android:layoutDirection="rtl"
            android:nextFocusUp="@id/sp_mouse_icon"
            android:text="Bordered Window"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/cb_disable_bossKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:buttonTint="@color/white"
            android:layoutDirection="rtl"
            android:nextFocusUp="@id/cb_border_window"
            android:text="Disable Boss Key (useful for full size remotes)"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/cb_behaviour_bossKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:buttonTint="@color/white"
            android:layoutDirection="rtl"
            android:nextFocusUp="@id/cb_disable_bossKey"
            android:text="Will Boss Key Toggle? (default is long press)"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/BossLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.20"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="176dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.20"
                android:text="@string/Boss_Key"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textColorHint="@color/white_2"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0.20"
                app:srcCompat="@drawable/playpausewhitw" />


            <Button
                android:id="@+id/bt_saveBossKey2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.30"
                android:background="@drawable/bg_button"
                android:buttonTint="@color/white"
                android:nextFocusLeft="@id/bt_detect"
                android:text="SAVE"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/BossLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.20"
                android:text="@string/Boss_Key2"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textColorHint="@color/white_2"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0.20"
                app:srcCompat="@drawable/settings" />


            <Button
                android:id="@+id/bt_saveBossKey3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.30"
                android:background="@drawable/bg_button"
                android:buttonTint="@color/white"
                android:nextFocusLeft="@id/bt_detect"
                android:text="SAVE"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/BossLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.20"
                android:text="@string/Boss_Key"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white_2"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_override"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.20"
                android:buttonTint="@color/white"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/Default_Key"
                android:inputType="number"
                android:nextFocusRight="@id/bt_detect"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white_2"
                android:textSize="20sp"
                tools:ignore="RtlCompat" />


            <Button
                android:id="@+id/bt_detect"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0"
                android:background="@drawable/bg_button"
                android:buttonTint="@color/white"
                android:nextFocusLeft="@id/et_override"
                android:nextFocusRight="@id/bt_saveBossKey"
                android:onClick="callDetect"
                android:text="@string/DETECT"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt_saveBossKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.30"
                android:background="@drawable/bg_button"
                android:buttonTint="@color/white"
                android:nextFocusLeft="@id/bt_detect"
                android:text="SAVE"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>